pyserial - coord abs

--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
        "65536"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -306,33 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion-r\\303\\251action diffusion.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 rapsberry pyserial.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m ../scenario_line_contraint.py\r\n",
-      " \u001b[32mM\u001b[m ../src/elasticite.py\r\n",
-      "\u001b[36m??\u001b[m ../.ipynb_checkpoints/\r\n",
-      "\u001b[36m??\u001b[m ../PLAN_PRINCIPE_PROTO/\r\n",
-      "\u001b[36m??\u001b[m ../Presentation-Dossier-Artistique/\r\n",
-      "\u001b[36m??\u001b[m ../TESTS_TRAME/\r\n",
-      "\u001b[36m??\u001b[m ../__temp_ipython__.png\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_gauche.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_lateral.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_pasapas.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_rot.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/fresnel.mp4\r\n",
-      "\u001b[36m??\u001b[m \"../files/grille_carr\\303\\251e.mp4\"\r\n",
-      "\u001b[36m??\u001b[m ../files/lames_contraintes.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/lames_oscillantes.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/lames_oscillantes_fps5.mp4\r\n",
-      "\u001b[36m??\u001b[m \"../notes-Laurent/2015-10-22_\\303\\251lasticit\\303\\251 LAMES-Dynamique_pdf.pdf\"\r\n",
-      "\u001b[36m??\u001b[m .ipynb_checkpoints/\r\n",
-      "\u001b[36m??\u001b[m __temp__.mp4\r\n",
-      "\u001b[36m??\u001b[m __temp_ipython__.png\r\n",
-      "\u001b[36m??\u001b[m anim.gif\r\n",
-      "\u001b[36m??\u001b[m ../screenshot.png\r\n",
-      "\u001b[36m??\u001b[m ../src/elasticite.egg-info/\r\n"
+      "fatal: unable to read 0474e6b1ed0786cde408cca646c82206efe068f0\r\n"
      ]
     }
    ],
@@ -343,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -352,8 +326,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master e8cbc37]  on connecte le π + simplifying things\n",
-      " 5 files changed, 131 insertions(+), 134 deletions(-)\n"
+      "[master 3fe6295]  on connecte le π + coordonnées absolues\r\n",
+      " 2 files changed, 225 insertions(+), 341 deletions(-)\r\n",
+      " delete mode 100644 \"posts/2015-11-17 \\303\\251lasticit\\303\\251 expansion en miroir - dynamique d'un point focal.ipynb\"\r\n"
      ]
     }
    ],
@@ -363,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -372,14 +347,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To git@git.framasoft.org:laurentperrinet/elasticte.git\r\n",
-      " ! [rejected]        master -> master (fetch first)\r\n",
-      "error: failed to push some refs to 'git@git.framasoft.org:laurentperrinet/elasticte.git'\r\n",
-      "hint: Updates were rejected because the remote contains work that you do\r\n",
-      "hint: not have locally. This is usually caused by another repository pushing\r\n",
-      "hint: to the same ref. You may want to first integrate the remote changes\r\n",
-      "hint: (e.g., 'git pull ...') before pushing again.\r\n",
-      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\r\n"
+      "Counting objects: 20, done.\n",
+      "Delta compression using up to 4 threads.\n",
+      "Compressing objects: 100% (20/20), done.\n",
+      "Writing objects: 100% (20/20), 83.92 KiB | 0 bytes/s, done.\n",
+      "Total 20 (delta 12), reused 0 (delta 0)\n",
+      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
+      "   5998394..3fe6295  master -> master\n"
      ]
     }
    ],
