--- a/posts/2015-11-26 élasticité - scénario vague.ipynb
+++ b/posts/2015-11-26 élasticité - scénario vague.ipynb
@@ -4395,6 +4395,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurentperrinet/pool/Dropbox/py-elasticite\n",
+      "/Users/laurentperrinet/pool/Dropbox/py-elasticite/posts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd ..\n",
+    "%run  scenario_line_vague.py writer\n",
+    "%cd posts"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {
     "collapsed": false,
@@ -4433,6 +4455,28 @@
     "\n",
     "    # running the code\n",
     "    el.main(e_solo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurentperrinet/pool/Dropbox/py-elasticite\n",
+      "/Users/laurentperrinet/pool/Dropbox/py-elasticite/posts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd ..\n",
+    "%run  scenario_line_vague_solo.py writer\n",
+    "%cd posts"
    ]
   },
   {
