--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../mat/line_vague_dense.npy ../mat/line_vague_solo.npy\r\n"
+      "../mat/line_fresnelastique.npy ../mat/line_vague_dense.npy    ../mat/line_vague_solo.npy\r\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -59,64 +59,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../scenario_line_vague.py\n"
+      "Overwriting ../scenario_line_master.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile ../scenario_master.py\n",
+    "%%writefile ../scenario_line_master.py\n",
     "#!/usr/bin/env python\n",
     "# -*- coding: utf8 -*-\n",
     "\n",
     "import elasticite as el\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
-    "class EdgeGrid(el.EdgeGrid):\n",
-    "    def __init__(self, vague, x_offset=0, y_offset=0, t_offset=0, N_steps = 256, damp_tau=5., **kwargs):\n",
-    "        #super(el.EdgeGrid.__init__(self))\n",
-    "        #super(el.EdgeGrid, self).__init__(**kwargs)\n",
-    "        el.EdgeGrid.__init__(self, **kwargs)\n",
-    "        #print (self.verb, kwargs)\n",
-    "        self.vague = vague\n",
-    "        self.x_offset = x_offset\n",
-    "        self.y_offset = y_offset\n",
-    "        self.t_offset = t_offset\n",
-    "        self.N_steps = N_steps\n",
-    "        #print(self.x_offset, self.y_offset, self.t_offset)\n",
-    "        #print(self.z.shape)\n",
-    "        self.damp_tau = damp_tau\n",
-    "        \n",
-    "        \n",
-    "    def update(self):\n",
-    "        if self.structure: N_lame = self.N_lame-self.struct_N\n",
-    "        else: N_lame = self.N_lame\n",
-    "        damp = lambda t: 1. - np.exp(-np.abs(np.mod(t+self.period/2, self.period)-self.period/2)/self.damp_tau)\n",
+    "def master(e, filename):\n",
     "\n",
-    "        N_periods = 4\n",
-    "        i = np.mod(np.int(self.t/self.period * self.vague.shape[2] / N_periods), self.vague.shape[2])\n",
-    "        surface = self.vague[self.x_offset:(self.x_offset+N_lame), self.y_offset, self.t_offset+i]\n",
-    "        dsurface = np.gradient(surface)\n",
-    "        print(dsurface.mean(), dsurface.max(), damp(self.t))\n",
-    "        dsurface /= np.abs(dsurface).max()\n",
-    "        dsurface *= np.arctan(np.pi/4*damp(self.t)) # maximum angle achieved\n",
-    "        self.lames[2, :N_lame] = np.tan(dsurface)\n",
+    "    def montage(z, z_in):\n",
+    "        z_in[:, 0] += z[-1, 0] + e.desired_fps # increment the time on the new array\n",
     "        \n",
+    "        return np.vstack((z, z_in))\n",
+    "\n",
+    "    burnout_time = 4.\n",
+    "    z = np.zeros((1, e.N_lame+1)) # zero at zero\n",
+    "    np.vstack((z, np.hstack((np.array(burnout_time), np.zeros(e.N_lame) ))))\n",
+    "    \n",
+    "    matpath = 'mat/'\n",
+    "    z_s = {}\n",
+    "    for scenario in ['line_vague_dense', 'line_vague_solo', 'line_fresnelastique']:\n",
+    "        z_s[scenario] = np.load(os.path.join(matpath, scenario + '.npy'))\n",
+    "    \n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_vague_dense'])\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_vague_solo'])\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_fresnelastique'])\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_vague_dense'])\n",
+    "    \n",
+    "    ###########################################################################\n",
+    "    # save the file\n",
+    "    np.save(filename, z)\n",
+    "\n",
+    "        \n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    import sys\n",
     "    if len(sys.argv)>1: mode = sys.argv[1]\n",
     "    else: mode = 'both'\n",
-    "    \n",
-    "    burnout_time = 4.\n",
-    "    \n",
-    "    matpath = '../mat/'\n",
-    "    for scenario in ['line_vague_dense', 'line_vague_solo']:\n",
-    "        z = np.load(scenario + '.npy')\n",
     "        \n",
-    "    period = 20\n",
-    "    e = EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n",
-    "                 verb=True, period=period, filename='mat/master.npy', \n",
-    "                 vague = vague_dense,\n",
-    "                 x_offset=0, y_offset=0, t_offset=0, N_steps=512)\n",
+    "    filename='mat/master.npy'\n",
+    "    \n",
+    "    e = el.EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n",
+    "                 verb=True, filename=filename)\n",
+    "\n",
+    "    master(e, filename)\n",
     "\n",
     "    # running the code\n",
     "    el.main(e)\n"
@@ -124,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -134,34 +131,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../scenario_line_vague_solo.py\n"
+      "/Users/laurentperrinet/pool/Dropbox/py-elasticite\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions except for the concatenation axis must match exactly",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/Users/laurentperrinet/pool/Dropbox/py-elasticite/scenario_line_master.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m                  verb=True, filename=filename)\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0mmaster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;31m# running the code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/laurentperrinet/pool/Dropbox/py-elasticite/scenario_line_master.py\u001b[0m in \u001b[0;36mmaster\u001b[0;34m(e, filename)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmontage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'line_vague_solo'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;31m###########################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmontage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'line_fresnelastique'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0;31m###########################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmontage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'line_vague_dense'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/laurentperrinet/pool/Dropbox/py-elasticite/scenario_line_master.py\u001b[0m in \u001b[0;36mmontage\u001b[0;34m(z, z_in)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmontage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_in\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mz_in\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdesired_fps\u001b[0m \u001b[0;31m# increment the time on the new array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_in\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mburnout_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m     \"\"\"\n\u001b[0;32m--> 230\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0matleast_2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_m\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtup\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions except for the concatenation axis must match exactly"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/laurentperrinet/pool/Dropbox/py-elasticite/posts\n"
      ]
     }
    ],
    "source": [
-    "%%writefile ../scenario_line_vague_solo.py\n",
-    "#!/usr/bin/env python\n",
-    "# -*- coding: utf8 -*-\n",
-    "\n",
-    "import elasticite as el\n",
-    "import numpy as np\n",
-    "\n",
-    "from scenario_line_vague import make_vague, EdgeGrid\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    import sys\n",
-    "    if len(sys.argv)>1: mode = sys.argv[1]\n",
-    "    else: mode = 'both'\n",
-    "    period = 20\n",
-    "    vague_solo = make_vague(impulse=True)\n",
-    "    e_solo = EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n",
-    "                 verb=True, period=period, filename='mat/line_vague_solo.npy', \n",
-    "                 vague = vague_solo,\n",
-    "                 x_offset=vague_solo.shape[0]//2-25//2, y_offset=vague_solo.shape[1]//2, \n",
-    "                 t_offset=vague_solo.shape[-1]*3//8, N_steps=vague_solo.shape[-1]//4)\n",
-    "\n",
-    "    # running the code\n",
-    "    el.main(e_solo)"
+    "%cd ..\n",
+    "%run  scenario_line_master.py writer\n",
+    "%cd posts"
    ]
   },
   {
