--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -109,10 +109,11 @@
     "    e = el.EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n",
     "                 verb=True, filename=filename)\n",
     "\n",
-    "    master(e, filename)\n",
-    "\n",
-    "    # running the code\n",
-    "    # el.main(e)\n"
+    "    if mode == 'writer':\n",
+    "        master(e, filename)\n",
+    "    else:\n",
+    "        # running the code\n",
+    "        el.main(e)\n"
    ]
   },
   {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -220,23 +221,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \u001b[32mM\u001b[m ../mat/master.npy\r\n",
-      "\u001b[33mM\u001b[m  \"2015-11-26 \\303\\251lasticit\\303\\251 - sc\\303\\251nario montage.ipynb\"\r\n",
-      "\u001b[33mM\u001b[m  \"2015-11-26 \\303\\251lasticit\\303\\251 - sc\\303\\251nario vague.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m ../scenario_line_master.py\r\n",
-      " \u001b[32mM\u001b[m ../screenshot.png\r\n",
-      " \u001b[32mM\u001b[m ../src/elasticite.py\r\n"
+      " \u001b[32mM\u001b[m ../scenario_line_master.py\r\n"
      ]
     }
    ],
    "source": [
-    "! git add 2015-11-26*\n",
+    "#! git add 2015-11-26*\n",
     "!git s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -245,10 +241,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 7edb80c]  scenario master\r\n",
-      " 6 files changed, 2729 insertions(+), 57 deletions(-)\r\n",
-      " rewrite mat/master.npy (100%)\r\n",
-      " rewrite screenshot.png (99%)\r\n"
+      "[master 8c507c3]  scenario master\r\n",
+      " 1 file changed, 5 insertions(+), 4 deletions(-)\r\n"
      ]
     }
    ],
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -267,19 +261,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 11, done.\n",
+      "Counting objects: 3, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (11/11), done.\n",
-      "Writing objects: 100% (11/11), 586.71 KiB | 0 bytes/s, done.\n",
-      "Total 11 (delta 6), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 366 bytes | 0 bytes/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
       "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   5f7774f..7edb80c  master -> master\n"
+      "   9d430db..8c507c3  master -> master\n"
      ]
     }
    ],
    "source": [
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
