--- a/posts/2015-11-26 élasticité - scénario vague.ipynb
+++ b/posts/2015-11-26 élasticité - scénario vague.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -133,6 +133,7 @@
     "\n",
     "name_ = name + '_low'\n",
     "mc_wave = envelope_gabor_wave(fx, fy, ft, V_X=1., V_Y=0., B_wave=B_v, B_V=B_V, theta=theta, B_theta=B_theta, sf_0=sf_0, B_sf=B_sf, alpha=alpha)\n",
+    "mc_wave = mc.envelope_gabor(fx, fy, ft, V_X=1., V_Y=0., B_V=B_V, theta=theta, B_theta=B_theta, sf_0=sf_0, B_sf=B_sf, alpha=alpha)\n",
     "mc.figures(mc_wave, name_, vext=vext, seed=seed)\n",
     "mc.in_show_video(name_)\n"
    ]
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -414,7 +415,7 @@
     "        dsurface = np.gradient(surface)\n",
     "        dsurface *= np.bartlett(N_lame)\n",
     "        #print(dsurface.mean(), dsurface.max(), damp(self.t))\n",
-    "        #dsurface /= np.abs(dsurface).max()\n",
+    "        dsurface /= np.abs(dsurface).max()\n",
     "        dsurface *= np.tan(np.pi/8) # maximum angle achieved\n",
     "        self.lames[2, :N_lame] = np.arctan(dsurface)*damp(self.t)\n",
     "        \n",
